@@ -4,6 +4,7 @@
 	byte compile.
 	(epackage-info-mode-font-lock-keywords): Allow dash
 	in header names.
+	(epackage--layout-mapping): Add *-epkg-* to all files.
 
 2011-11-19 Sat  Jari Aalto  <jari.aalto@cante.net>
 
